[package]
name = "winit_menu_macos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
cocoa = "0.24"
objc = "0.2.7"
core-graphics = "0.22"
once_cell = "1.10.0"
crossbeam-channel = "0.5.4"
